...
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="username">UserName</string>
    <string name="tasks">Tasks</string>
    <string name="hello">Hello World</string>
    <string name="all_tasks">All Tasks</string>
    <string name="back">Back</string>
<!--    <string name="todo">TODO</string>-->
    <string name="task_three">Task Three</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_a_task">Add a Task</string>
    <!--    <string name="all_tasks">All Tasks</string>-->
    <string name="settings">Settings</string>
    <string name="task_two">Task Two</string>
    <string name="task_one">Task One</string>
    <!--    <string name="tasks">Tasks</string>-->
    <string name="img">img</string>
    <string name="add_task">Add Task</string>
    <string name="title">title</string>
...
